code/typescript/GlobalFilings/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Global Filings client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v1.0.0-blue)](https://developer.factset.com/api-catalog/global-filings-api)
[![npm](https://img.shields.io/npm/v/@factset/sdk-globalfilings)](https://www.npmjs.com/package/@factset/sdk-globalfilings)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)


The Filings API provides a comprehensive set of functionalities for searching and retrieving filing documents from various sources.

This API is designed to expose document search and document retrieval functionality. A document search will allow a request to query FactSet document databases based on certain search criteria specified in the request.

In addition, a document count request will provide information on the number of stories available for a particular security.

The reference endpoints, such as sources, formTypes, timeZones, and categories, provide comprehensive lists of available sources, form types, time zones, and categories, respectively.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.0.0
- SDK version: 2.0.1
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-globalfilings@2.0.1
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-globalfilings@2.0.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, FilingsAPIApi } = require('@factset/sdk-globalfilings');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new FilingsAPIApi();
const sources = ["EDG"]; // [String] | Code for document source to include.This is a comma-separated list. Use the ```/reference/sources``` endpoint to get the list of available sources.  
const opts = {
  'startDate': 20231222, // String | Start Date. Format is YYYYMMDD or relative +/- days (0,-1,etc).  **Note:** **The API supports data from 1995 onwards. Ensure that the provided Date falls within this range for accurate results.** 
  'endDate': 20231223, // String | End Date. Format is YYYYMMDD or relative +/- days (0,-1,etc).
  'ids': ["MODN-US"] // [String] | Requested symbols or securities.  This is a comma-separated list with a maximum limit of 1000.  Each symbol can be a FactSet exchange symbol, CUSIP, or SEDOL.
};

// Call api endpoint
apiInstance.getCount(sources, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-globalfilings');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/global-filings/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*globalfilings.FilingsAPIApi* | [**getCount**](docs/FilingsAPIApi.md#getCount) | **GET** /count | Returns the count of filings for specified source.
*globalfilings.FilingsAPIApi* | [**getFilings**](docs/FilingsAPIApi.md#getFilings) | **GET** /search | Returns the filings documents and related metadata within FactSet coverage.
*globalfilings.FilingsAPIApi* | [**getFormtype**](docs/FilingsAPIApi.md#getFormtype) | **GET** /reference/form-types | Returns the form types of EDGAR.
*globalfilings.FilingsAPIApi* | [**getSources**](docs/FilingsAPIApi.md#getSources) | **GET** /reference/sources | Returns the sources.
*globalfilings.FilingsAPIApi* | [**getTimezone**](docs/FilingsAPIApi.md#getTimezone) | **GET** /reference/time-zones | Returns the time zones.
*globalfilings.FilingsAPIApi* | [**getcategories**](docs/FilingsAPIApi.md#getcategories) | **GET** /reference/categories | Returns the categories.


## Documentation for Models

 - [globalfilings.ErrorExample](docs/ErrorExample.md)
 - [globalfilings.ErrorResponse](docs/ErrorResponse.md)
 - [globalfilings.InvestmentResearch](docs/InvestmentResearch.md)
 - [globalfilings.InvestmentResearchMeta](docs/InvestmentResearchMeta.md)
 - [globalfilings.InvestmentResearchMetaPagination](docs/InvestmentResearchMetaPagination.md)
 - [globalfilings.InvestmentResearchObject](docs/InvestmentResearchObject.md)
 - [globalfilings.ResponseCategies](docs/ResponseCategies.md)
 - [globalfilings.ResponseCategoriesObject](docs/ResponseCategoriesObject.md)
 - [globalfilings.ResponseCount](docs/ResponseCount.md)
 - [globalfilings.ResponseCountObject](docs/ResponseCountObject.md)
 - [globalfilings.ResponseFormtype](docs/ResponseFormtype.md)
 - [globalfilings.ResponseFormtypeObject](docs/ResponseFormtypeObject.md)
 - [globalfilings.ResponseSources](docs/ResponseSources.md)
 - [globalfilings.ResponseSourcesObject](docs/ResponseSourcesObject.md)
 - [globalfilings.ResponseTime](docs/ResponseTime.md)
 - [globalfilings.ResponseTimeObject](docs/ResponseTimeObject.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
